# magp_ws

./: .gitignore  Makefile  README.md
data/map/suzlab20251026/: map.pbstream  map.pgm  map.yaml
data/map/suzlab20251027/: map.pbstream  map.pgm  map.yaml
launch/: autonomous_driving.py  cartographer.launch.py
old/joy_pwm_controller/joy_pwm_controller/: joy_pca9685_controller.py  joy_pwm_controller.py
old/pytorch_joy_controller/: package.xml  setup.cfg  setup.py
script/: joy_controller.sh  map_saver.sh  mapping.sh  rosbag_manual_controller.sh
src/controller/joy_pwm_controller/: package.xml  setup.py
src/controller/pwm_controller/: package.xml  setup.py
src/joy_mux/: README.md  package.xml  setup.cfg  setup.py
src/joy_mux/joy_mux/: joy_mux_node.py
src/mux_pwm/: package.xml  setup.cfg  setup.py
src/mux_pwm/mux_pwm/: pwm_mux_node.py
src/pytorch_joy_controller/: package.xml  setup.cfg  setup.py
src/pytorch_joy_controller/launch/: joy_controller.launch.py
src/pytorch_joy_controller/pytorch_joy_controller/: joy_controller_node.py  model_inference.py
src/pytorch_joy_controller/pytorch_pwm_controller/: nn_pwm_controller_node.py
src/pytorch_pwm_controller/launch/: pytorch_pwm_controller.launch.py
src/pytorch_pwm_controller/pytorch_pwm_controller/: nn_pwm_controller_node.py
src/tools/bag_recorder/: README.md  package.xml  setup.cfg  setup.py
src/tools/m5stack_visualizer/: README.md  package.xml  setup.cfg  setup.py
src/urg_node2/: README_ja.md
src/urg_node2/config/: magp_2d.lua  magp_2d_localization.lua
(+23 files in other folders)
